[gd_scene load_steps=19 format=2]

[ext_resource path="res://Ui/Helth.png" type="Texture" id=1]
[ext_resource path="res://Ui/ProgressBar.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Rocky Roads/coin.png" type="Texture" id=3]
[ext_resource path="res://Ui/pause_1.png" type="Texture" id=4]
[ext_resource path="res://Ui/Born2bSportyV2.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/Coin.gd" type="Script" id=6]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Rocky Roads/heart.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
margin_left = 7.0
margin_right = 27.0
margin_bottom = 53.0
custom_constants/margin_right = 2
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 338.0
margin_bottom = 51.0
custom_constants/separation = 240

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
margin_right = 117.0
margin_bottom = 46.0

[node name="Helth" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 117.0
margin_bottom = 13.0
size_flags_horizontal = 3

[node name="Life" type="TextureProgress" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/Helth"]
margin_right = 117.0
margin_bottom = 13.0
value = 100.0
rounded = true
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/Helth"]
position = Vector2( 2, 6 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 5 )
frame = 1
playing = true

[node name="Coin" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 117.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/Coin"]
margin_right = 16.0
margin_bottom = 29.0
rect_min_size = Vector2( 16, 16 )
stretch_mode = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/Coin/TextureRect"]
position = Vector2( 2, 13 )
scale = Vector2( 1.8, 1.8 )
frames = SubResource( 10 )
frame = 2
playing = true

[node name="Label2" type="Label" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/Coin"]
margin_left = 20.0
margin_top = 4.0
margin_right = 24.0
margin_bottom = 24.0
size_flags_vertical = 6
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = ":"
align = 1
valign = 1

[node name="Label" type="Label" parent="Control/MarginContainer/HBoxContainer/VBoxContainer/Coin"]
margin_left = 28.0
margin_top = 4.0
margin_right = 53.0
margin_bottom = 24.0
rect_min_size = Vector2( 25, 16 )
size_flags_vertical = 6
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1

[node name="TextureButton" type="TextureButton" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_right = -15.0
margin_bottom = 25.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Control"]
autostart = true

[connection signal="Coin" from="." to="Control/MarginContainer/HBoxContainer/VBoxContainer/Coin" method="UpdateCoin"]
[connection signal="changed" from="." to="Control/MarginContainer/HBoxContainer/VBoxContainer/Helth/Life" method="set_value"]
[connection signal="max_changed" from="." to="Control/MarginContainer/HBoxContainer/VBoxContainer/Helth/Life" method="set_max"]
[connection signal="pressed" from="Control/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Control/Timer" to="." method="_on_Timer_timeout"]
